[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reki"
version = "0.0.1"
authors = [
    { name="Rekimart", email="support@rekimart.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["reki"]

[project.urls]
Homepage = "https://github.com/rekimart/reki"