[metadata]
name = reki
version = 0.0.1
database_version = 0.0.1
author = Rekimart
organization = Rekimart
description = This project implements the Gaia subnet for Bittensor
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt



